added all the localizables in Main Menu

--- a/PushySquares/en.lproj/Localizable.strings
+++ b/PushySquares/en.lproj/Localizable.strings
@@ -9,3 +9,8 @@
 "Do you really want to quit?" = "Do you really want to quit?";
 "Do you really want to restart?" = "Do you really want to restart?";
 
+// MainMenuController
+"START" = "START";
+"HELP" = "HELP";
+"JOIN" = "JOIN";
+"HOST" = "HOST";
