--- a/PushySquares/en.lproj/Localizable.strings
+++ b/PushySquares/en.lproj/Localizable.strings
@@ -42,3 +42,8 @@
 "Too many players!" = "Too many players!";
 "You can only connect at most 3 players to the game." = "You can only connect at most 3 players to the game.";
 "MAPS" = "MAPS";
+
+// JoinViewController
+"Connected to %@" = "Connected to %@";
+"Waiting to be connected to a game..." = "Waiting to be connected to a game...";
+
