--- a/PushySquares/en.lproj/Localizable.strings
+++ b/PushySquares/en.lproj/Localizable.strings
@@ -54,3 +54,8 @@
 "All other players disconnected." = "All other players disconnected.";
 "%@ disconnected from the game." = "%@ disconnected from the game.";
 
+// GameBoardView
+"Red" = "Red";
+"Green" = "Green";
+"Blue" = "Blue";
+"Yellow" = "Yellow";
