--- a/PushySquares/en.lproj/Localizable.strings
+++ b/PushySquares/en.lproj/Localizable.strings
@@ -59,3 +59,8 @@
 "Green" = "Green";
 "Blue" = "Blue";
 "Yellow" = "Yellow";
+
+// StatusBar
+"NEW SQUARE IN:\n" = "NEW SQUARE IN:\n";
+"LIVES\n" = "LIVES\n";
+"TURN" = "TURN";
